can update user Data

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@ a {
   flex-direction: column;
 }
 
+.pointer-cursor {
+  cursor: pointer;
+  color: rgb(199, 137, 22);
+}
+
 .cpContainer h1 {
   text-align: center;
 }
