--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   margin: 0%;
   /* font-family: Arial, Helvetica, sans-serif; */
   font-family: monospace;
+  background-color: #f8f8f8;
 }
 .homePage a {
   color: green;
@@ -162,7 +163,7 @@ textarea {
   cursor: not-allowed;
 }
 
-.homePage {
+/* .homePage {
   width: 80%;
   min-height: calc(100vh - 80px);
   height: auto;
@@ -172,7 +173,7 @@ textarea {
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
-}
+} */
 
 .homePage .post {
   width: 700px;
@@ -218,14 +219,14 @@ textarea {
   cursor: pointer;
 } */
 
-.post .postTextContainer {
+/* .post .postTextContainer {
   word-wrap: break-word;
   height: auto;
   max-height: 100vh;
   width: 100%;
   overflow: hidden;
   overflow-y: auto;
-}
+} */
 
 .post {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -270,32 +271,32 @@ textarea {
   margin-bottom: 16px;
 }
 
-.form-group {
+/* .form-group {
   display: flex;
 
   margin-bottom: 16px;
   align-items: center;
-}
+} */
 
-.form-label {
+/* .form-label {
   display: block;
   font-size: 15px;
   margin-bottom: 0px;
-}
+} */
 
-.form-input,
+/* .form-input,
 .form-textarea {
   width: 100%;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
-}
+} */
 
-.postTopRight {
+/* .postTopRight {
   display: flex;
   align-items: center;
-}
+} */
 
 .input-date,
 .input-time {
@@ -359,6 +360,7 @@ textarea {
   cursor: pointer;
   font-size: 16px;
   transition: transform 0.2s;
+ 
 }
 
 .btn-primary {
@@ -379,12 +381,12 @@ textarea {
   transform: scale(1.2);
 }
 
-.post {
+/* .post {
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   margin: 30px 0;
-}
+} */
 
 .postWrapper {
   padding: 9px;
@@ -648,5 +650,16 @@ font-size: 15px;
   font-weight: bold;
   color: #302e2e;
 }
+.studentpage-btn{
+  background-color: #f8f8f8;
 
+}
+ .btn-edit{
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+} 
 
+.btn-signout:hover{
+ background-color: red;
+}
