--- a/src/Signup.css
+++ b/src/Signup.css
@@ -362,7 +362,7 @@ input[type="checkbox"]:not(old):checked + label > span:before {
   width: auto;
 }
 
-label {
+labelS {
   position: absolute;
   left: 0;
   top: 50%;
