--- a/src/pages/Students/Students.css
+++ b/src/pages/Students/Students.css
@@ -11,12 +11,13 @@
 }
 
 .form-box {
-  width: 500px;
-  border: 8px solid;
+  width: 100%;
+  
+  border: 0px solid;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 500px;
+  height: 80%;
 }
 
   .form-container {
@@ -78,25 +79,19 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding:0px;
+    padding-bottom:8px;
+    border-radius: 1%;
     
 
   }
+  .main:hover{
+    transform: scale(1.02);
+    background-color: rgb(222, 222, 222);
+
+  }
    
-  
-  .main{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding:0px;
-    
-  
-  }
+
   .editable{
-    color: black;
+    color: rgb(212, 145, 37);
     width: 250px;
-    font-weight: bold; 
-    border: solid 3px;
   }
-  
